begin work converting navbar to fixed non-collapsing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,10 +17,6 @@
 
 /* NAVBAR */
 
-#navbar {
-  width: 1000px;
-}
-
 .navbar-form {
   position: relative;
   display: inline-block;
