--- a/app/assets/stylesheets/containers.scss
+++ b/app/assets/stylesheets/containers.scss
@@ -26,3 +26,23 @@
 .landing-container {
   height: 300px;
 }
+
+#navbar {
+  background-color: #E7E7E7;
+  border-bottom: 1px solid #CCC;
+  /*background-color: #A2C563;*/
+  position: fixed;
+  width: 100%;
+  z-index: 50;
+}
+
+#navbar-buffer {
+  width: 100%;
+  height: 50px;
+}
+
+.bb-navbar-container {
+  height: 50px;
+  width: 1000px;
+  margin: 0 auto;
+}
